cert-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - edgeblazer.io
    secretName: edgeblazer-cert
  rules:
  - host: "edgeblazer.io"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: nginx
              port:
                number: 80
